# kwhisperx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agent.md  plan.md  pyproject.toml  run.sh  run_tests.sh  session.md  setup.sh
autostart/: kwhisperx.desktop
kwhisperx/: __init__.py  __main__.py  app.py  audio.py  config.py  dbus_service.py  download_models.py  hotkey.py  inject.py  settings.py  single_instance.py  transcribe.py
tests/: conftest.py  test_app_tray.py  test_audio.py  test_config.py  test_inject.py  test_single_instance.py  test_transcribe.py  test_worker.py
