[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kwhisperx"
version = "0.2.3"
description = "Kubuntu X11 tray dictation with faster-whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "faster-whisper>=1.0",
    "pynput>=1.7",
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
kwhisperx = "kwhisperx.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kwhisperx*"]

[tool.ruff]
line-length = 100
target-version = "py310"
