[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kwhisperx"
version = "0.3.5"
description = "Kubuntu X11 tray dictation with faster-whisper"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5",
    "faster-whisper>=1.0",
    "pynput>=1.7",
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["ruff", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[project.scripts]
kwhisperx = "kwhisperx.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kwhisperx*"]

[tool.ruff]
line-length = 100
target-version = "py310"
